# RenderPipeline

./: .gitignore  MANIFEST.in  rpsetup.py  setup.py  setup_tools.py  whl_demo.py
config/: panda3d-config.prc  pipeline.yaml
rpcore/: __init__.py  common_resources.py  effect.py  loader.py  mount_manager.py  render_pipeline.py  render_stage.py  stage_manager.py
rpcore/data/: generate_txo_files.py
rpcore/data/film_grain/: generate.py  grain.compute.glsl
rpcore/gui/: checkbox.py  debugger.py  draggable_window.py  loading_screen.py  pipe_viewer.py  render_mode_selector.py  sprite.py  text_node.py
rpcore/native/: __init__.py
rpcore/pluginbase/: manager.py
rpcore/stages/: ambient_stage.py  apply_lights_stage.py
rpcore/util/: ies_profile_loader.py  network_communication.py  task_scheduler.py
rplibs/: pyqt_imports.py
rplibs/yaml/: __init__.py
rpnative/: CMakeLists.txt  build.py
rpnative/source/: CMakeLists.txt
rpplugins/ao/: ao_stage.py
rpplugins/bloom/: plugin.py
rpplugins/clouds/: plugin.py
rpplugins/color_correction/: auto_exposure_stage.py  manual_exposure_stage.py  plugin.py
rpplugins/color_correction/shader/: apply_exposure.frag.glsl  manual_exposure.frag.glsl
rpplugins/forward_shading/: forward_stage.py
rpplugins/forward_shading/shader/: merge_with_deferred.frag.glsl
rpplugins/scattering/: scattering_methods.py
toolkit/day_time_editor/: main.py
toolkit/import_sun_data/: import_data.py
toolkit/pathtracing_reference/res/tex/: convert_cubemap.py
toolkit/plugin_configurator/: main.py
toolkit/rp_distributor/: main.py
